# ghostmesh

./: .gitignore  .mcp.json  AGENT.md  CLAUDE.md  LAUNCH-PROMPT.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: spec-v02.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  join_orchestrator.rs  main.rs  state.rs  tauri_event_sink.rs  types.rs
src-tauri/src/commands/: chats.rs  identity.rs  messages.rs  mod.rs  network.rs  settings.rs  updates.rs
src-tauri/src/core/: mod.rs  types.rs
src-tauri/src/core/crypto/: encrypt.rs  exchange.rs  identity.rs  noise.rs  sign.rs
src-tauri/src/core/net/: actor.rs  discovery.rs  event_sink.rs  handler.rs  peer_manager.rs  service.rs  transport.rs  wire.rs
src-tauri/src/core/store/: chats.rs  db.rs  messages.rs  mod.rs  outbox.rs
src-tauri/src/core/sync/: engine.rs  frontier.rs  lamport.rs
src/components/: ChatView.svelte  InspectorPanel.svelte  InviteDialog.svelte  MessageRow.svelte  NetworkDashboard.svelte  OnboardingScreen.svelte  PeerIndicator.svelte  Settings.svelte  Sidebar.svelte
src/lib/: api.ts  events.ts
src/lib/stores/: chats.svelte.ts  chats.ts  identity.svelte.ts  identity.ts  messages.svelte.ts  messages.ts  network.svelte.ts  network.ts
src/styles/: global.css
