[package]
name = "ghostmesh-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostmesh_core = { path = "../src-tauri", package = "ghostmesh" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
ciborium = "0.2"
