[package]
name = "ghostmesh"
version = "0.3.0"
edition = "2021"

[lib]
name = "ghostmesh_core"
path = "src/core/mod.rs"

[[bin]]
name = "ghostmesh"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
hkdf = "0.12"
argon2 = "0.5"
aes-gcm = "0.10"
snow = "0.9"
rand = "0.8"

# Network
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base62 = "2"
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
